[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MediaStation"
version = "0.9.0"
description = "Tools for extracting data from Media Station, Inc. CD-ROM titles (including Disney's Animated Storybook)"
readme = "README.md"
authors = [{ name = "npjg" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["disney", "reverse-engineering"]
requires-python = ">=3.9"
dependencies = [
    "self_documenting_struct>=0.9.1",
    "asset_extraction_framework>=0.9.2"
]

[project.urls]
Homepage = "https://github.com/npjg/cxt"

[project.scripts]
MediaStation = "MediaStation:Engine.main"