[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Empty since no extra settings are needed, presence enables setuptools_scm.

[project]
# We are using setuptools_scm for versioning, so no version number is specified here.
dynamic = ["version"]
name = "MediaStation"
description = "Tools for extracting assets from Media Station, Inc. CD-ROM titles (including Disney's Animated Storybook)"
readme = "README.md"
authors = [{ name = "Nathanael Gentry" }]
license = { file = "COPYING" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["disney", "reverse-engineering"]
requires-python = ">=3.9"
dependencies = [
    "self_documenting_struct==0.9.2",
    "asset_extraction_framework>=0.9.6"
]

[project.urls]
Homepage = "https://github.com/npjg/MediaStation"
Repository = "https://github.com/npjg/MediaStation"

[project.scripts]
MediaStation = "MediaStation:Engine.main"